force-app/main/default/objects/Doctor__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <inlineHelpText>Current status of doctor active or not</inlineHelpText>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>InActive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>