force-app/main/default/objects/Doctor__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.D.S</fullName>
            </value>
            <value>
                <fullName>M.D.S</fullName>
            </value>
            <value>
                <fullName>MIAO</fullName>
            </value>
            <value>
                <fullName>Dental Surgeons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>