force-app/main/default/objects/Doctor__c/fields/Total_Patient_Pending_Progress__c.field-meta.xml
<CustomField>
    <fullName>Total_Patient_Pending_Progress__c</fullName>
    <label>Total Patient Pending/Progress</label>
    <summaryFilterItems>
        <field>Patient__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending, In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Patient__c.Doctor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>